<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/elevation_10"
    style="@style/Widget.MaterialComponents.CardView">

    <!-- Foto Profil -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="@dimen/elevation_16"
        android:layout_marginTop="@dimen/marginTop_16"
        android:src="@drawable/ic_person"
        android:scaleType="centerCrop"
        style="@style/Widget.AppCompat.ImageButton"
        android:contentDescription="@string/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Nama Pengguna -->
    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elevation_16"
        android:layout_marginTop="@dimen/marginTop_8"
        android:text="@string/user"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp"
        android:textStyle="bold"
        style="@style/Widget.MaterialComponents.TextView"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintEnd_toStartOf="@id/lastMessageTime"
        app:layout_constraintTop_toTopOf="@id/profileImage"/>

    <!-- Pesan Terakhir -->
    <TextView
        android:id="@+id/lastMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elevation_16"
        android:layout_marginTop="@dimen/marginTop_8"
        android:text="@string/message1"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        style="@style/Widget.MaterialComponents.TextView"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintEnd_toStartOf="@id/lastMessageTime"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <!-- Waktu Last Message -->
    <TextView
        android:id="@+id/lastMessageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/elevation_16"
        android:layout_marginTop="@dimen/marginTop_8"
        android:text="@string/times1"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileImage"/>
</androidx.constraintlayout.widget.ConstraintLayout>
