<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <!-- RecyclerView for content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLay"
        android:layout_below="@+id/topLay"
        android:layout_margin="@dimen/elevation_10" />

    <!-- Top layout containing user information -->
    <RelativeLayout
        android:id="@+id/topLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="?attr/colorPrimary">

        <!-- Back button -->
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/margin_32"
            android:layout_height="@dimen/margin_32"
            android:src="@drawable/ic_arrow_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/width_5"
            android:padding="@dimen/elevation_6"
            app:tint="@android:color/white"
            android:contentDescription="@string/backbutton" />

        <!-- User image -->
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_toEndOf="@id/backBtn"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_person"
            android:layout_marginStart="@dimen/elevation_6"
            android:contentDescription="@string/profile_image" />

        <!-- User information -->
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_image"
            android:layout_marginStart="@dimen/elevation_6"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textStyle="bold"
                android:textSize="@dimen/elevation_16"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <!-- More options button -->
        <ImageView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_more_vert"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/elevation_10"
            android:layout_marginTop="@dimen/elevation_10"
            android:rotationY="180"
            app:tint="@android:color/white"
            android:contentDescription="@string/menu_button" />

    </RelativeLayout>

    <!-- Another RecyclerView, make sure to customize accordingly -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLay"
        android:layout_below="@id/topLay"
        android:layout_marginStart="@dimen/elevation_10"
        android:layout_marginTop="@dimen/elevation_10"
        android:layout_marginEnd="@dimen/elevation_10"
        android:layout_marginBottom="@dimen/elevation_10" />

    <!-- Bottom layout containing input field and FAB -->
    <RelativeLayout
        android:id="@+id/bottomLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/width_5">

        <!-- Input field -->
        <EditText
            android:id="@+id/enter_msg"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:layout_marginStart="@dimen/elevation_16"
            android:layout_marginEnd="@dimen/elevation_10"
            android:background="@drawable/curved_grey"
            android:layout_centerVertical="true"
            android:hint="@string/enter_message"
            android:inputType="text"
            android:paddingStart="@dimen/elevation_16"
            android:paddingEnd="@dimen/elevation_10"
            android:drawableStart="@drawable/ic_add_circle"
            android:drawablePadding="@dimen/elevation_6"
            android:layout_toStartOf="@id/flot"
            android:autofillHints="username" />

        <!-- Floating Action Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/flot"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/elevation_10"
            android:tint="?attr/colorOnPrimary"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/action_button" />

    </RelativeLayout>

</RelativeLayout>
