<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sender_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:orientation="horizontal"
    android:elevation="@dimen/elevation_4">

    <!-- Grup untuk Bubble Chat -->
    <LinearLayout
        android:id="@+id/senderBubbleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/sender_bubble_background"
        android:padding="@dimen/elevation_10"
        android:layout_marginStart="@dimen/elevation_8"
        android:layout_marginEnd="@dimen/elevation_8">

        <!-- Bubble Chat -->
        <TextView
            android:id="@+id/senderMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/sent_message" />

        <TextView
            android:id="@+id/senderChatTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elevation_6"
            android:textColor="@android:color/darker_gray"
            android:text="@string/times2"
            android:textSize="@dimen/elevation_10"/>
    </LinearLayout>

    <!-- Foto Profil -->
    <ImageView
        android:id="@+id/senderProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/elevation_4"
        android:layout_marginTop="@dimen/marginTop_8"
        android:src="@drawable/ic_person"
        android:scaleType="centerCrop"
        style="@style/Widget.AppCompat.ImageButton"
        android:contentDescription="@string/profile_image" />

</LinearLayout>
